kubernetes/apps/network/external-services/proxmox-backup-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox-backup-server
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8007
