kubernetes/apps/network/external-services/proxmox-backup-server/tlsroute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &app proxmox-backup-server
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["pbs.${DOMAIN_APP}"]
  parentRefs:
    - name: envoy-services
      namespace: network
      sectionName: tls-app
  rules:
    - backendRefs:
        - name: *app
          port: 443
